jilles      2005/12/26 23:05:34 UTC	(20051226-4211)
  Log:
  Refuse to add an akill with '!' in its mask.
  

  Changes:	Modified:
  +6 -0		trunk/modules/operserv/akill.c (File Modified) 


jilles      2005/12/26 15:46:53 UTC	(20051226-4209)
  Log:
  ChanServ UNBAN: check for nick!user@ip bans as well;
  CIDR bans (as supported by charybdis and ratbox at least)
  are not recognized.
  

  Changes:	Modified:
  +10 -4	trunk/modules/chanserv/ban.c (File Modified) 


jilles      2005/12/26 15:37:20 UTC	(20051226-4207)
  Log:
  - Add charybdis section
  - Update inspircd section
  

  Changes:	Modified:
  +10 -4	trunk/doc/IRCD (File Modified) 


jilles      2005/12/26 15:31:34 UTC	(20051226-4205)
  Log:
  ChanServ UNBAN: use LIST_FOREACH_SAFE -- we're removing nodes from the list
  

  Changes:	Modified:
  +4 -4		trunk/modules/chanserv/ban.c (File Modified) 


jilles      2005/12/26 15:27:43 UTC	(20051226-4203)
  Log:
  ChanServ UNBAN: default to user giving the command
  

  Changes:	Modified:
  +3 -2		trunk/help/cservice/unban (File Modified) 
  +11 -5	trunk/modules/chanserv/ban.c (File Modified) 


jilles      2005/12/26 15:06:58 UTC	(20051226-4201)
  Log:
  - Move some signal handler setting down to a point where
    we are sufficiently started to handle the signal
  - When detaching replace stdin/stdout/stderr with /dev/null
    and create a new session instead of just a new
    process group
  

  Changes:	Modified:
  +21 -7	trunk/src/atheme.c (File Modified) 


jilles      2005/12/26 14:59:33 UTC	(20051226-4199)
  Log:
  Set close-on-exec flag for the log file, to avoid
  log file descriptors accumulating on restarts.
  

  Changes:	Modified:
  +3 -0		trunk/src/function.c (File Modified) 


jilles      2005/12/26 14:01:51 UTC	(20051226-4197)
  Log:
  - Install doc/help with proper permissions
  - Don't copy over .svn stuff
  - Only install files under doc/, files under help/ and files
    under subdirectories of help/
  

  Changes:	Modified: